user create medium modal

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,10 +28,10 @@
     {% endif %}
     <div id="flash"><p class="title is-4 has-text-centered"></p></div>
     {% if background %}
-    <section class="hero is-info is-bold {% if size %}is-{{size}}{% endif %}">
+    <section class="hero is-info is-bold is-fullheight">
     <div class="hero-body" id="background">
     {% elif frame %}
-    <section class="hero is-info is-bold {% if size %}is-{{size}}{% endif %}">
+    <section class="hero is-info is-bold is-fullheight">
     <div class="hero-body">
     {% endif %}
 
