--- a/app/templates/index/index.html
+++ b/app/templates/index/index.html
@@ -100,7 +100,7 @@
     </div>
 
     <div class="content">
-      The wise grown-up with real life experience. 
+      The wise grown-up with real life experience. Currently researching the field of decentralized finance.
     </div>
   </div>
 </div>
