--- a/app/templates/profiles/user/profile.html
+++ b/app/templates/profiles/user/profile.html
@@ -108,6 +108,8 @@
 {% include "profiles/club/create.html" %}
 {% elif request.url_rule.endpoint == 'profiles.create_project' %}
 {% include "profiles/project/create.html" %}
+{% elif request.url_rule.endpoint == 'profiles.create_medium' %}
+{% include "profiles/user/create-medium.html" %}
 {% endif %}
 
 {% endblock %}
@@ -119,9 +121,11 @@
 <link rel="stylesheet" href="/static/css/profiles/user/edit.css">
 <link rel="stylesheet" href="/static/css/profiles/photo.css">
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"/>
+<script src="/static/js/comms/search-filter-bar.js"></script>
 <script src="/static/js/profiles/profile.js"></script>
 <script src="/static/js/profiles/user/profile.js"></script>
 <script src="/static/js/profiles/user/edit.js"></script>
+<script src="/static/js/profiles/user/create-medium.js"></script>
 <script src="/static/js/profiles/club/create.js"></script>
 <script src="/static/js/profiles/project/create.js"></script>
 <script src="/static/js/profiles/configure-skills.js"></script>
@@ -369,9 +373,13 @@ $(document).on('click', '.modal-background', function() {
     redirect({id:"user-profile"}, "Profile", "/user/{{user.username}}/", changeToProfile);
 });
 
+$(document).on('focus', '#create-bar-input', function() {
+    redirect({id:"create-medium"}, "Create medium", "/create/medium/", changeToCreateMedium);
+  });
+
 $(window).on("popstate", function() {
   if (window.history.state.id == "edit-user") {
-    changeToEdit()
+    changeToEdit();
   }
   else if (window.history.state.id == "user-profile") {
     changeToProfile();
@@ -389,7 +397,20 @@ $(window).on("popstate", function() {
     changeToCreateProject();
   }
 
+  else if (window.history.state.id == "create-medium") {
+      changeToCreateMedium();
+  }
+
 });
+
+function changeToCreateMedium() {
+  $("#modal-box").append(`
+    {% with what='Medium' %}
+    {% include "profiles/user/create-medium.html" %}
+    {% endwith %}
+    `);
+  $(document.body).addClass('noscroll');
+}
 
 function changeToEdit() {
   $("#modal-box").append(`
@@ -436,6 +457,8 @@ window.history.replaceState({id:"user-photo"},"Profile photo", "/user/{{user.use
 window.history.replaceState({id:"create-club"},"Create club", "/create/club/");
 {% elif request.url_rule.endpoint == 'profiles.create_project' %}
 window.history.replaceState({id:"create-project"},"Create project", "/create/project/");
+{% elif request.url_rule.endpoint == 'profiles.create_medium' %}
+window.history.replaceState({id:"create-medium"},"Create medium", "/create/medium/");
 {% else %}
 window.history.replaceState({id:"user-profile"},"Profile", "./");
 {% endif %}
