--- a/app/templates/comms/medium/by-user.html
+++ b/app/templates/comms/medium/by-user.html
@@ -1,3 +1,12 @@
-<p>{{medium.title}}</p>
-
-<p>{{medium.content}}</p>
+{% extends "base.html" %}
+{% block content %}
+<div style="max-width:566px; width:100%; ">
+{% with is_liked=medium.is_liked %}
+		{% include 'comms/wall/medium2.html' %}
+{% endwith %}
+</div>
+{% endblock %}
+{% block scripts %}
+<link rel="stylesheet" href="/static/css/comms/medium.css">
+<script src="{{ url_for('static', filename='js/comms/medium.js') }}"></script>
+{% endblock %}
