--- a/app/templates/profiles/user/profile.html
+++ b/app/templates/profiles/user/profile.html
@@ -125,7 +125,7 @@
 <script src="/static/js/profiles/profile.js"></script>
 <script src="/static/js/profiles/user/profile.js"></script>
 <script src="/static/js/profiles/user/edit.js"></script>
-<script src="/static/js/profiles/user/create-medium.js"></script>
+<script src="{{ url_for('static', filename='js/profiles/user/create-medium.js') }}"></script>
 <script src="/static/js/profiles/club/create.js"></script>
 <script src="/static/js/profiles/project/create.js"></script>
 <script src="/static/js/profiles/configure-skills.js"></script>
