--- a/app/templates/comms/wall/flex-stream.html
+++ b/app/templates/comms/wall/flex-stream.html
@@ -1,6 +1,6 @@
 <div style="margin-top: 10px;" class="wall">
-	{% if media %}
-	{% for medium in media %}
+	{% if wall %}
+	{% for medium in wall.media %}
 		{% with is_liked=medium.is_liked %}
 		{% include 'comms/wall/medium2.html' %}
 		{% endwith %}
