--- a/app/templates/comms/wall/medium-with-quote.html
+++ b/app/templates/comms/wall/medium-with-quote.html
@@ -1,7 +1,7 @@
 {% extends "comms/wall/plain-medium.html" %}
 {% block quote_html %}
 {% with medium=medium.quote, is_quote=True %}
-<div class="clickable">
+<div class="embedded clickable">
 {% include 'comms/wall/plain-medium.html' %}
 </div>
 {% endwith %}
