--- a/app/templates/profiles/tabs.html
+++ b/app/templates/profiles/tabs.html
@@ -31,7 +31,7 @@
     </ul>
       </div>
 <div id="profile-tabs-content">
-    <div id="tab1" class="profile-tab-content vanish">
+    <div id="tab1" class="profile-tab-content">
       {% include tab1contentpath %}
     </div>
     <div id="tab2" class="profile-tab-content vanish">
