the start of grouped sorted media

--- a/app/templates/comms/wall/flex-stream.html
+++ b/app/templates/comms/wall/flex-stream.html
@@ -1,6 +1,6 @@
 <div style="margin-top: 10px;" class="wall">
 	{% if wall %}
-	{% for medium in wall.media %}
+	{% for medium in media %}
 			{% include 'comms/wall/medium.html' %}
 	{% endfor %}
 	{% endif %}
