--- a/app/templates/comms/wall/plain-medium.html
+++ b/app/templates/comms/wall/plain-medium.html
@@ -69,7 +69,26 @@
   </div>
   {% if not is_template and not is_quote %}
   <div class="media-right clickable">
-    <button class="button is-rounded medium-menu-button"><span class="icon is-small"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></span></button>
+    <div class="dropdown medium-menu">
+      <div class="dropdown-trigger">
+        <button class="button is-rounded medium-menu-button"><span class="icon is-small"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></span></button>
+      </div>
+      <div class="dropdown-menu" role="menu">
+        <div class="dropdown-content">
+          <a class="dropdown-item delete-medium is-danger">
+            <span class="text has-text-danger">Delete</span><span class="icon">
+              <i class="fa fa-trash has-text-danger" aria-hidden="true"></i>
+            </span>
+          </a>
+          <hr class="dropdown-divider">
+          <a href="#" class="dropdown-item">
+            <span class="text">Report</span><span class="icon">
+              <i class="fa fa-flag" aria-hidden="true"></i>
+            </span>
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
   {% endif %}
 </article>
